infra/golang-study/security_groups.tf
resource "aws_security_group" "golang-study-sg" {
  vpc_id = aws_vpc.golang-study-vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "golang-study-sg"
  }
}
